# coronary-stenosis-detection

./: .gitattributes  .gitignore  pyproject.toml
coronary-analysis/: pyproject.toml
coronary-analysis/src/coronary_analysis/datasets/: __init__.py  arcade_syntax.py  dca1.py  dca1_fs_cad.py  fs_cad.py  lm_cad.py
coronary-analysis/src/coronary_analysis/metrics/: __init__.py  bce_dice.py  cl_dice.py  smp.py
coronary-analysis/src/coronary_analysis/models/: segmentation.py  unet.py
coronary-analysis/src/coronary_analysis/train/: __init__.py  training_loop.py
coronary-analysis/src/coronary_analysis/transforms/: __init__.py  dca1_transforms.py  lm_cad_transforms.py  transforms.py
coronary-analysis/src/coronary_analysis/utils/: __init__.py  device.py  visualization.py
models/: best_segmentation_model.pth
models/pretrained/arcade_syntax_binary/: CoronaryDeeplabV3Plus_0.pth  CoronaryDeeplabV3Plus_1.pth  CoronaryUNetCustom_0.pth  CoronaryUNetCustom_1.pth  CoronaryUNetCustom_2.pth  CoronaryUNetCustom_3.pth  CoronaryUNetPP_0.pth  CoronaryUNetPP_1.pth  CoronaryUNetPP_2.pth
notebooks/: .gitignore  datasets.ipynb  feature_extraction.ipynb  load_model.ipynb  optuna-sqlite.db  segmentation.ipynb  segmentation_finetune.ipynb  segmentation_pretrain.ipynb  skeletonize.ipynb
raports/: inital_results.md  initial_results.md  plan.md
