[project]
name = "coronary-analysis"
version = "0.1.0"
description = "A package for coronary stenosis detection and analysis."
authors = [
    {name = "Kamil Rudny (krudny)"},
    {name = "Piotr Rusak (piotrrusak)"},
    {name = "Łukasz Kwinta (lkwinta)", email = "lukaszmind@gmail.com"}
] 
requires-python = ">=3.11"
dependencies = [
    "torch",
    "opencv-python",
    "numpy",
    "albumentations",
    "pycocotools",
    "segmentation-models-pytorch",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coronary_analysis"]

[tool.hatch.build.targets.sdist]
include = ["src/coronary_analysis"]
